--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,14 +11,133 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sarpanch:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
+
     <title>The Name Game</title>
+
+    <style>
+      body {
+        margin: 0;
+        font-family: 'Poppins', sans-serif;
+        background: url('https://cdn.donmai.us/original/fc/75/fc75d6950dda9b8042fb55a155a58109.jpg') no-repeat center center fixed;
+        background-size: cover;
+        color: #fff;
+        overflow: hidden;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      /* Animated background circles */
+      .background-circles {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        overflow: hidden;
+      }
+
+      .circle {
+        position: absolute;
+        border-radius: 50%;
+        background: rgba(255, 255, 255, 0.1);
+        animation: float 20s infinite;
+        pointer-events: none;
+      }
+
+      @keyframes float {
+        0% {
+          transform: translateY(0) scale(1);
+        }
+        50% {
+          transform: translateY(-50px) scale(1.2);
+        }
+        100% {
+          transform: translateY(0) scale(1);
+        }
+      }
+
+      #root {
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 4rem;
+        font-weight: 600;
+        margin-bottom: 1rem;
+        text-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+      }
+
+      p {
+        font-size: 1.5rem;
+        font-weight: 300;
+        margin-bottom: 2rem;
+        text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+      }
+
+      button {
+        background: linear-gradient(45deg, #ff7e5f, #feb47b);
+        color: white;
+        border: none;
+        border-radius: 50px;
+        padding: 15px 40px;
+        font-size: 1.2rem;
+        font-weight: 600;
+        cursor: pointer;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        box-shadow: 0 4px 15px rgba(255, 126, 95, 0.5);
+      }
+
+      button:hover {
+        transform: translateY(-5px) scale(1.05);
+        box-shadow: 0 8px 20px rgba(255, 126, 95, 0.7);
+      }
+
+      button:active {
+        transform: translateY(2px);
+        box-shadow: 0 2px 10px rgba(255, 126, 95, 0.4);
+      }
+
+      /* Subtle animation on entry */
+      .fade-in {
+        animation: fadeIn 1.5s ease;
+      }
+
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+    </style>
   </head>
   <body>
-  
-    <div id="root"></div>
-  
+    <div class="background-circles">
+      <div class="circle" style="width: 200px; height: 200px; top: 10%; left: 15%; animation-delay: 0s;"></div>
+      <div class="circle" style="width: 300px; height: 300px; top: 50%; left: 60%; animation-delay: 2s;"></div>
+      <div class="circle" style="width: 150px; height: 150px; top: 30%; left: 75%; animation-delay: 4s;"></div>
+      <div class="circle" style="width: 400px; height: 400px; top: 70%; left: 30%; animation-delay: 6s;"></div>
+    </div>
+
+    <div id="root">
+      <div class="fade-in">
+        <h1>Welcome to The Name Game</h1>
+        <p>Play, Learn, and Enjoy the journey of names!</p>
+        <button>Get Started</button>
+      </div>
+    </div>
   </body>
 </html>
