--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,6 +34,39 @@
         text-align: center;
         padding: 10px;
       }
+      
+  @media (max-width: 768px) {
+    body {
+      padding: 5px;
+      font-size: 14px;
+    }
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+    }
+  }
+
+  @media (max-width: 480px) {
+    body {
+      padding: 2px;
+      font-size: 12px;
+    }
+
+    h1 {
+      font-size: 1.5rem;
+    }
+
+    button {
+      padding: 8px 16px;
+      font-size: 0.9rem;
+    }
+  }
+
 
       /* Animated background circles */
       .background-circles {
