--- a/public/index.html
+++ b/public/index.html
@@ -35,38 +35,29 @@
         padding: 10px;
       }
       
-  @media (max-width: 768px) {
-    body {
-      padding: 5px;
-      font-size: 14px;
-    }
-
-    h1 {
-      font-size: 2rem;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 1rem;
-    }
+      @media (max-width: 768px) {
+  button {
+    padding: 10px 15px;
+    font-size: 1rem;
   }
-
-  @media (max-width: 480px) {
-    body {
-      padding: 2px;
-      font-size: 12px;
-    }
-
-    h1 {
-      font-size: 1.5rem;
-    }
-
-    button {
-      padding: 8px 16px;
-      font-size: 0.9rem;
-    }
+  input {
+    font-size: 1rem;
+    padding: 8px;
+    width: 90%; /* Reduce width on smaller screens */
   }
+}
 
+@media (max-width: 480px) {
+  button {
+    padding: 8px 10px;
+    font-size: 0.9rem;
+  }
+  input {
+    font-size: 0.9rem;
+    padding: 6px;
+    width: 80%; /* Further reduce width for very small screens */
+  }
+}
 
       /* Animated background circles */
       .background-circles {
