--- a/public/index.html
+++ b/public/index.html
@@ -33,18 +33,22 @@
   align-items: center;
   padding: 10px;
   overflow-y: auto; /* Enable scrolling */
+  overflow-x: hidden;
 }
 
 @media (min-width: 769px) {
   body {
     overflow: hidden;
   }
+  html {height: 100%}
 
   #root {
     height: 100vh; /* Fixed height for consistent layout */
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    overflow-y: auto;
   }
 }
       
