--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,11 @@
   color: #fff;
   height: 100%;
   display: flex;
-  flex-direction: column; 
-  justify-content: flex-start; 
+  flex-direction: column; /* Allow vertical stacking */
+  justify-content: flex-start; /* Start content from the top */
   align-items: center;
   padding: 10px;
-  overflow-y: auto; 
+  overflow-y: auto; /* Enable scrolling */
   overflow-x: hidden;
 }
 
@@ -43,7 +43,7 @@
   html {height: 100%}
 
   #root {
-    height: 100vh; 
+    height: 100vh; /* Fixed height for consistent layout */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,7 +60,7 @@
   input {
     font-size: 1rem;
     padding: 8px;
-    width: 90%; 
+    width: 90%; /* Reduce width on smaller screens */
   }
 }
 
@@ -72,7 +72,7 @@
   input {
     font-size: 0.9rem;
     padding: 6px;
-    width: 80%; 
+    width: 80%; /* Further reduce width for very small screens */
   }
 }
 
